--- a/agb_en.html
+++ b/agb_en.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-<link rel="icon" type="image/png" href="logo.png">
+<link rel="icon" type="image/ico" href="logo.ico">
 </head>
 
 <body style="background-color: rgb(0,0,0);">
