--- a/en.html
+++ b/en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: #000000;">
+<html style="background-color: rgba(0,0,0,0);">
 
 <head>
     <meta charset="utf-8">
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-<link rel="icon" type="image/ico" href="logo.ico">
+<link rel="icon" type="image/png" href="logo.png">
 </head>
 
 <body style="background-color: rgb(0,0,0);">
