--- a/es.html
+++ b/es.html
@@ -4,12 +4,24 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Abendiix</title>
+    <title>Abendiix - Desarrollador Indie de Videojuegos</title>
+    <meta name="description" content="Hello! I go by Abendiix on the Internet. I'm an Indie Game Developer from Málaga, Spain. Here's my portfolio, enjoy!">
+    <meta name="twitter:description" content="Hello! I go by Abendiix on the Internet. I'm an Indie Game Developer from Málaga, Spain. Here's my portfolio, enjoy!">
+    <meta name="twitter:card" content="summary">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/img/favicon.svg">
+    <meta name="twitter:image" content="assets/img/favicon.svg">
+    <meta name="twitter:title" content="Abendiix - Indie Game Devoper">
+    <meta property="og:description" content="Hello! I go by Abendiix on the Internet. I'm an Indie Game Developer from Málaga, Spain. Here's my portfolio, enjoy!">
+    <link rel="icon" type="image/svg+xml" sizes="100x100" href="assets/img/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="100x100" href="assets/img/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="100x100" href="assets/img/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="100x100" href="assets/img/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="100x100" href="assets/img/favicon.svg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-<link rel="icon" type="image/ico" href="favicon.ico">
 </head>
 
 <body style="background-color: rgb(0,0,0);">
@@ -17,13 +29,14 @@
         <div class="col text-right"><img class="img-fluid" src="assets/img/abendiix.png"></div>
     </div>
     <div class="row no-gutters">
-        <div class="col text-center" style="margin: 0px;"><img class="img-fluid" src="assets/img/logo.png" style="width: 200px;height: 200px;">
-            <p class="text-monospace text-center" style="color: rgb(220,220,220);">¡Hola! Me hago llamar Abendiix en Internet.<br>Soy un Desarrollador Indie de Videojuegos y soy de Málaga, España.<br>Y este es mi portfolio, ¡disfruta!</p>
+        <div class="col text-center" style="margin: 0px;"><img class="img-fluid" style="width: 200px;height: 200px;" src="assets/img/logo.png">
+            <p class="text-monospace text-center" style="color: rgb(220,220,220);">¡Hola! Me hago llamar Abendiix en Internet.<br>Soy un Desarrollador Indie de Videojuegos de Málaga, España.<br>Aquí tienes mi portfolio, ¡disfruta!</p>
         </div>
     </div>
     <div class="row no-gutters" style="margin: 28px;">
-        <div class="col text-nowrap text-center" style="margin-left: 0px;margin-right: 40px;"><a class="text-nowrap invisible" href="google.es" style="padding: 15px;"><a href="https://twitter.com/Abendiix" target="_blank"><img title="Follow me on Twitter :D" src="assets/img/twitter.png" class="visible" class="img-fluid" style="height: 40px;" /></a><a class="text-nowrap invisible" href="#" style="padding: 15px;"><a href="https://abendiix.itch.io/" target="_blank"><img title="Have fun with my games on itchio ^^" src="assets/img/itchio.png" class="visible" class="img-fluid" style="height: 40px;" /></a><a class="text-nowrap invisible"
-                href="#" style="padding: 15px;"><a href="https://ko-fi.com/abendiix" target="_blank"><img title= "You can invite me to some coffe ;)" src="assets/img/kofi.png" class="visible" class="img-fluid" style="height: 35px;" /></a><a class="text-nowrap invisible" href="#" style="padding: 15px;"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=LZ4UCH52EVVCW&source=url" title= "I appreciate any donations!!!" target="_blank"><img src="assets/img/paypal.png" class="visible" class="img-fluid" style="height: 40px;" /></a><a class="text-nowrap invisible" href="#" style="padding: 15px;"><a href="mailto:contact@abendiix.com?Subject=Site%20Mail" target="_blank"><img title="Feel free to mail me! Even for bussiness or just chatting!" src="assets/img/correo.png" class="visible" class="img-fluid" style="height: 40px;" /></a></div>
+        <div class="col text-nowrap text-center" style="margin-left: 0px;margin-right: 40px;"><a class="text-nowrap invisible" style="padding: 15px;" href="google.es"><a href="https://twitter.com/Abendiix" target="_blank"><img title="Sígueme en Twitter :D" src="assets/img/twitter.png" class="visible" class="img-fluid" style="height: 40px;" /></a><a class="text-nowrap invisible" style="padding: 15px;" href="#"><a href="https://abendiix.itch.io/" target="_blank"><img title="Diviérte con mis juegos en itchio ^^" src="assets/img/itchio.png" class="visible" class="img-fluid" style="height: 40px;" /></a><a class="text-nowrap invisible"
+                style="padding: 15px;" href="#"><a href="https://ko-fi.com/abendiix" target="_blank"><img title= "Puedes invitarme a un cafelillo ;)" src="assets/img/kofi.png" class="visible" class="img-fluid" style="height: 35px;" /></a><a class="text-nowrap invisible" style="padding: 15px;" href="#"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=LZ4UCH52EVVCW&source=url" title= "¡¡¡Agradezco cualquier donación!!!" target="_blank"><img src="assets/img/paypal.png" class="visible" class="img-fluid" style="height: 40px;" /></a><a class="text-nowrap invisible" style="padding: 15px;"
+                href="#"><a href="mailto:contact@abendiix.com?Subject=Site%20Mail" target="_blank"><img title="¡Siéntete libre de mandarme un correo a contacto@abendiix.com!"  src="assets/img/correo.png" class="visible" class="img-fluid" style="height: 40px;" /></a></div>
     </div>
     <div class="projects-horizontal" style="background-color: rgb(0,0,0);">
         <div class="container">
