--- a/agb_en.html
+++ b/agb_en.html
@@ -4,12 +4,24 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Abendiix</title>
+    <title>Abendiix - Indie Game Devoper</title>
+    <meta name="description" content="Hello! I go by Abendiix on the Internet. I'm an Indie Game Developer from Málaga, Spain. Here's my portfolio, enjoy!">
+    <meta name="twitter:description" content="Hello! I go by Abendiix on the Internet. I'm an Indie Game Developer from Málaga, Spain. Here's my portfolio, enjoy!">
+    <meta name="twitter:card" content="summary">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/img/favicon.svg">
+    <meta name="twitter:image" content="assets/img/favicon.svg">
+    <meta name="twitter:title" content="Abendiix - Indie Game Devoper">
+    <meta property="og:description" content="Hello! I go by Abendiix on the Internet. I'm an Indie Game Developer from Málaga, Spain. Here's my portfolio, enjoy!">
+    <link rel="icon" type="image/svg+xml" sizes="100x100" href="assets/img/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="100x100" href="assets/img/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="100x100" href="assets/img/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="100x100" href="assets/img/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="100x100" href="assets/img/favicon.svg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-<link rel="icon" type="image/ico" href="favicon.ico">
 </head>
 
 <body style="background-color: rgb(0,0,0);">
