--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
     <meta name="twitter:description" content="Hello! I go by Abendiix on the Internet. I'm an Indie Game Developer from Málaga, Spain. Here's my portfolio, enjoy!">
     <meta name="twitter:card" content="summary">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="/assets/img/favicon.svg?h=3046f625729e86d8b8c8b1e51c217b23">
-    <meta name="twitter:image" content="/assets/img/favicon.svg?h=3046f625729e86d8b8c8b1e51c217b23">
+    <meta property="og:image" content="assets/img/favicon.svg">
+    <meta name="twitter:image" content="assets/img/favicon.svg">
     <meta name="twitter:title" content="Abendiix - Indie Game Devoper">
     <meta property="og:description" content="Hello! I go by Abendiix on the Internet. I'm an Indie Game Developer from Málaga, Spain. Here's my portfolio, enjoy!">
-    <link rel="icon" type="image/svg+xml" sizes="100x100" href="/assets/img/favicon.svg?h=3046f625729e86d8b8c8b1e51c217b23">
-    <link rel="icon" type="image/svg+xml" sizes="100x100" href="/assets/img/favicon.svg?h=3046f625729e86d8b8c8b1e51c217b23">
-    <link rel="icon" type="image/svg+xml" sizes="100x100" href="/assets/img/favicon.svg?h=3046f625729e86d8b8c8b1e51c217b23">
-    <link rel="icon" type="image/svg+xml" sizes="100x100" href="/assets/img/favicon.svg?h=3046f625729e86d8b8c8b1e51c217b23">
-    <link rel="icon" type="image/svg+xml" sizes="100x100" href="/assets/img/favicon.svg?h=3046f625729e86d8b8c8b1e51c217b23">
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css?h=174a2a6e947c8ba11c260dd9956b0e1b">
+    <link rel="icon" type="image/svg+xml" sizes="100x100" href="assets/img/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="100x100" href="assets/img/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="100x100" href="assets/img/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="100x100" href="assets/img/favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="100x100" href="assets/img/favicon.svg">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
-    <link rel="stylesheet" href="/assets/css/Projects-Horizontal.css?h=fb28b8d95a28dba5c6fec23412473f65">
-    <link rel="stylesheet" href="/assets/css/styles.css?h=3e43fb960e6adc3495897327ce29a37c">
+    <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body style="background-color: rgb(0,0,0);">
     <div class="row no-gutters text-left" style="margin: 27px;">
-        <div class="col text-right"><a href="/"><img class="img-fluid" src="/assets/img/abendiix.png?h=a2cf9dd98297e498f88500ced7976a94" /></a></div>
+        <div class="col text-right"><a href="/"><img class="img-fluid" src="assets/img/abendiix.png" /></a></div>
     </div>
     <div class="row no-gutters">
-        <div class="col text-center" style="margin: 0px;"><img class="img-fluid" style="width: 200px;height: 200px;" src="/assets/img/logo.png?h=381c19ddc70f805bf2f426506a56649c">
-            <p class="text-monospace text-center" style="color: rgb(220,220,220);">Hello! I go by Abendiix on the Internet.<br>I'm an Indie Game Developer from Málaga, Spain.<br>Here's my portfolio, enjoy!<br><br><a href="https://twitter.com/Abendiix" target="_blank"><img title="Follow me on Twitter :D" src="/assets/img/twitter.png?h=1453a50d0f252415929facdf3b5091be" class="visible" class="img-fluid" style="height: 40px;" /></a><img class="img-fluid invisible" style="width: 20px;height: 20px;"><a href="https://abendiix.itch.io/" target="_blank"><img title="Have fun with my games on itchio ^^" src="/assets/img/itchio.png?h=1169ebeebc01dba16846e1f10bb08145" class="visible" class="img-fluid" style="height: 40px;" /></a>
+        <div class="col text-center" style="margin: 0px;"><img class="img-fluid" style="width: 200px;height: 200px;" src="assets/img/logo.png">
+            <p class="text-monospace text-center" style="color: rgb(220,220,220);">Hello! I go by Abendiix on the Internet.<br>I'm an Indie Game Developer from Málaga, Spain.<br>Here's my portfolio, enjoy!<br><br><a href="https://twitter.com/Abendiix" target="_blank"><img title="Follow me on Twitter :D" src="assets/img/twitter.png" class="visible" class="img-fluid" style="height: 40px;" /></a><img class="img-fluid invisible" style="width: 20px;height: 20px;"><a href="https://abendiix.itch.io/" target="_blank"><img title="Have fun with my games on itchio ^^" src="assets/img/itchio.png" class="visible" class="img-fluid" style="height: 40px;" /></a>
                 <img
-                    class="img-fluid invisible" style="width: 20px;height: 20px;"><a href="https://ko-fi.com/abendiix" target="_blank"><img title= "You can invite me to some coffe ;)" src="/assets/img/kofi.png?h=c0f6a9f8666b67738cdf757ce1839518" class="visible" class="img-fluid" style="height: 35px;" /></a><img class="img-fluid invisible" style="width: 20px;height: 20px;"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=LZ4UCH52EVVCW&source=url" title= "I appreciate any donations!!!" target="_blank"><img src="/assets/img/paypal.png?h=259270c7cc9f9b6d68f3697ff8f8480d" class="visible" class="img-fluid" style="height: 40px;" /></a><img class="img-fluid invisible" style="width: 20px;height: 20px;"><a href="mailto:contact@abendiix.com?Subject=Site%20Mail" target="_blank"><img title="Feel free to mail me at contact@abendiix.com!" src="/assets/img/correo.png?h=d49ef0851a4a42c057817d7d0e356963" class="visible" class="img-fluid" style="height: 40px;" /></a></p>
+                    class="img-fluid invisible" style="width: 20px;height: 20px;"><a href="https://ko-fi.com/abendiix" target="_blank"><img title= "You can invite me to some coffe ;)" src="assets/img/kofi.png" class="visible" class="img-fluid" style="height: 35px;" /></a><img class="img-fluid invisible" style="width: 20px;height: 20px;"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=LZ4UCH52EVVCW&source=url" title= "I appreciate any donations!!!" target="_blank"><img src="assets/img/paypal.png" class="visible" class="img-fluid" style="height: 40px;" /></a><img class="img-fluid invisible" style="width: 20px;height: 20px;"><a href="mailto:contact@abendiix.com?Subject=Site%20Mail" target="_blank"><img title="Feel free to mail me at contact@abendiix.com!" src="assets/img/correo.png" class="visible" class="img-fluid" style="height: 40px;" /></a></p>
         </div>
     </div>
     <div class="projects-horizontal" style="background-color: rgb(0,0,0);">
@@ -40,28 +40,28 @@
             <div class="row projects">
                 <div class="col-sm-6 item" style="padding-top: 30px;">
                     <div class="row" data-aos="fade" data-aos-once="true">
-                        <div class="col-md-12 col-lg-5"><img class="rounded img-fluid" src="/assets/img/iconn.png?h=e9e78abe9cd3c8b1f48b5c968b27c752"></div>
+                        <div class="col-md-12 col-lg-5"><img class="rounded img-fluid" src="assets/img/iconn.png"></div>
                         <div class="col text-monospace" style="background-color: rgb(50,50,50);font-size: 12px;margin-right: 5px;margin-left: 5px;">
                             <h3 class="name" style="color: rgb(220,220,220);">Abendiix Game Boy (WIP)</h3>
-                            <p class="description" style="color: rgb(150,150,150);font-size: 14px;">An Android app where anyone can play with the Game Boy titles I'm going to be making until I finish this project.<br><a href="/agb_en.html"><button class="btn btn-test" type="button" style="margin-top: 25px;background-color: rgb(0,0,0);">More info soon</button></a><br><br></p>
+                            <p class="description" style="color: rgb(150,150,150);font-size: 14px;">An Android app where anyone can play with the Game Boy titles I'm going to be making until I finish this project.<br><a href="/abendiixgameboy_en"><button class="btn btn-test" type="button" style="margin-top: 25px;background-color: rgb(0,0,0);">More info soon</button></a><br><br></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 item" style="padding-top: 30px;">
                     <div class="row" data-aos="fade" data-aos-once="true">
-                        <div class="col-md-12 col-lg-5 text-center"><img class="rounded img-fluid" src="/assets/img/iconNMWeb.png?h=fdfc616a318d2c517a37d4798434c18d"></div>
+                        <div class="col-md-12 col-lg-5 text-center"><img class="rounded img-fluid" src="assets/img/iconNMWeb.png"></div>
                         <div class="col text-monospace" style="background-color: rgb(50,50,50);margin-right: 5px;margin-left: 5px;">
                             <h3 class="name" style="color: rgb(220,220,220);">Manza Nash (WIP)</h3>
-                            <p class="description" style="color: rgb(150,150,150);font-size: 14px;">A small and casual game based on Nash Equilibrium's game theory where you play against a friend face to face.<br><a href="/MN_en.html"><button class="btn btn-test" type="button" style="margin-top: 25px;background-color: rgb(0,0,0);">More info soon</button><br><br></p>
+                            <p class="description" style="color: rgb(150,150,150);font-size: 14px;">A small and casual game based on Nash Equilibrium's game theory where you play against a friend face to face.<br><a href="/manzanash_en"><button class="btn btn-test" type="button" style="margin-top: 25px;background-color: rgb(0,0,0);">More info soon</button><br><br></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="/assets/js/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
-    <script src="/assets/bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
-    <script src="/assets/js/bs-animation.js?h=cc4d20340936b09bec81533dd59db3a8"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-animation.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
 </body>
 
