--- a/abendiixgameboy_en.html
+++ b/abendiixgameboy_en.html
@@ -26,7 +26,7 @@
 
 <body style="background-color: rgb(0,0,0);">
     <div class="row no-gutters text-left" style="margin: 27px;">
-        <div class="col text-right"><a href="en.html"><img class="img-fluid" src="assets/img/abendiix.png" /></a></div>
+        <div class="col text-right"><a href="en.html"><img class="img-fluid" src="abendiix.png" /></a></div>
     </div>
     <div class="projects-horizontal" style="background-color: rgb(0,0,0);">
         <div class="container">
