--- a/es.html
+++ b/es.html
@@ -26,17 +26,17 @@
 
 <body style="background-color: rgb(0,0,0);">
     <div class="row no-gutters text-left" style="margin: 27px;">
-        <div class="col text-right"><img class="img-fluid" src="assets/img/abendiix.png"></div>
+        <div class="col text-right"><img class="img-fluid" src="abendiix.png"></div>
     </div>
     <div class="row no-gutters">
-        <div class="col text-center" style="margin: 0px;"><img class="img-fluid" style="width: 200px;height: 200px;" src="assets/img/logo.png">
+        <div class="col text-center" style="margin: 0px;"><img class="img-fluid" style="width: 200px;height: 200px;" src="logo.png">
             <p class="text-monospace text-center" style="color: rgb(220,220,220);">¡Hola! Me hago llamar Abendiix en Internet.<br>Soy un Desarrollador Indie de Videojuegos de Málaga, España.<br>Aquí tienes mi portfolio, ¡disfruta!</p>
         </div>
     </div>
     <div class="row no-gutters" style="margin: 28px;">
-        <div class="col text-nowrap text-center" style="margin-left: 0px;margin-right: 40px;"><a class="text-nowrap invisible" style="padding: 15px;" href="google.es"><a href="https://twitter.com/Abendiix" target="_blank"><img title="Sígueme en Twitter :D" src="assets/img/twitter.png" class="visible" class="img-fluid" style="height: 40px;" /></a><a class="text-nowrap invisible" style="padding: 15px;" href="#"><a href="https://abendiix.itch.io/" target="_blank"><img title="Diviérte con mis juegos en itchio ^^" src="assets/img/itchio.png" class="visible" class="img-fluid" style="height: 40px;" /></a><a class="text-nowrap invisible"
-                style="padding: 15px;" href="#"><a href="https://ko-fi.com/abendiix" target="_blank"><img title= "Puedes invitarme a un cafelillo ;)" src="assets/img/kofi.png" class="visible" class="img-fluid" style="height: 35px;" /></a><a class="text-nowrap invisible" style="padding: 15px;" href="#"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=LZ4UCH52EVVCW&source=url" title= "¡¡¡Agradezco cualquier donación!!!" target="_blank"><img src="assets/img/paypal.png" class="visible" class="img-fluid" style="height: 40px;" /></a><a class="text-nowrap invisible" style="padding: 15px;"
-                href="#"><a href="mailto:contact@abendiix.com?Subject=Site%20Mail" target="_blank"><img title="¡Siéntete libre de mandarme un correo a contacto@abendiix.com!"  src="assets/img/correo.png" class="visible" class="img-fluid" style="height: 40px;" /></a></div>
+        <div class="col text-nowrap text-center" style="margin-left: 0px;margin-right: 40px;"><a class="text-nowrap invisible" style="padding: 15px;" href="google.es"><a href="https://twitter.com/Abendiix" target="_blank"><img title="Sígueme en Twitter :D" src="twitter.png" class="visible" class="img-fluid" style="height: 40px;" /></a><a class="text-nowrap invisible" style="padding: 15px;" href="#"><a href="https://abendiix.itch.io/" target="_blank"><img title="Diviérte con mis juegos en itchio ^^" src="itchio.png" class="visible" class="img-fluid" style="height: 40px;" /></a><a class="text-nowrap invisible"
+                style="padding: 15px;" href="#"><a href="https://ko-fi.com/abendiix" target="_blank"><img title= "Puedes invitarme a un cafelillo ;)" src="kofi.png" class="visible" class="img-fluid" style="height: 35px;" /></a><a class="text-nowrap invisible" style="padding: 15px;" href="#"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=LZ4UCH52EVVCW&source=url" title= "¡¡¡Agradezco cualquier donación!!!" target="_blank"><img src="paypal.png" class="visible" class="img-fluid" style="height: 40px;" /></a><a class="text-nowrap invisible" style="padding: 15px;"
+                href="#"><a href="mailto:contact@abendiix.com?Subject=Site%20Mail" target="_blank"><img title="¡Siéntete libre de mandarme un correo a contacto@abendiix.com!"  src="correo.png" class="visible" class="img-fluid" style="height: 40px;" /></a></div>
     </div>
     <div class="projects-horizontal" style="background-color: rgb(0,0,0);">
         <div class="container">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row" data-aos="fade" data-aos-once="true">
-                        <div class="col-md-12 col-lg-5 text-center"><img class="rounded img-fluid" src="assets/img/iconNMWeb.png"></div>
+                        <div class="col-md-12 col-lg-5 text-center"><img class="rounded img-fluid" src="iconNMWeb.png"></div>
                         <div class="col text-monospace" style="background-color: rgb(50,50,50);margin-right: 5px;margin-left: 5px;">
                             <h3 class="name" style="color: rgb(220,220,220);">Manza Nash (WIP)</h3>
                             <p class="description" style="color: rgb(150,150,150);font-size: 14px;">Pequeño y casual juego basado en el Equilibrio de Nash donde juegas contra un amigo cara a cara.<br><button class="btn btn-test" type="button" style="margin-top: 25px;background-color: rgb(0,0,0);">Pronto, más información</button><br><br></p>
