--- a/manzanash_en.html
+++ b/manzanash_en.html
@@ -26,14 +26,14 @@
 
 <body style="background-color: rgb(0,0,0);">
     <div class="row no-gutters text-left" style="margin: 27px;">
-        <div class="col text-right"><a href="en.html"><img class="img-fluid" src="assets/img/abendiix.png" /></a></div>
+        <div class="col text-right"><a href="en.html"><img class="img-fluid" src="abendiix.png" /></a></div>
     </div>
     <div class="projects-horizontal" style="background-color: rgb(0,0,0);">
         <div class="container">
             <div class="row projects">
                 <div class="col-sm-6 item">
                     <div class="row" data-aos="fade-up-left" data-aos-once="true">
-                        <div class="col-md-12 col-lg-5 text-center"><img class="rounded img-fluid" src="assets/img/iconNMWeb.png"></div>
+                        <div class="col-md-12 col-lg-5 text-center"><img class="rounded img-fluid" src="iconNMWeb.png"></div>
                         <div class="col text-monospace" style="background-color: rgb(50,50,50);margin-right: 5px;margin-left: 5px;">
                             <h3 class="name" style="color: rgb(220,220,220);">Manza Nash (WIP)</h3>
                             <p class="description" style="color: rgb(150,150,150);font-size: 14px;">A small and casual game based on Nash Equilibrium's game theory where you play against a friend face to face.<br><a href="manzanash_en.html"><button class="btn btn-test" type="button" style="margin-top: 25px;background-color: rgb(0,0,0);">More info soon</button><br><br></p>
