--- a/es.html
+++ b/es.html
@@ -35,10 +35,10 @@
                     </div>
                     <div class="col-md-6">
                         <div class="row d-xl-flex justify-content-xl-center">
-                            <div class="col d-flex justify-content-center align-items-center"><a href="#" style="width: 15%;margin: 2%;"><img src="assets/img/Twitter.svg"></a><a href="#" style="width: 15%;margin: 2%;"><img src="assets/img/Itch.io.svg"></a><a href="#" style="width: 15%;margin: 2%;"><img src="assets/img/Ko-fi.svg"></a></div>
+                            <div class="col d-flex justify-content-center align-items-center"><a href="https://twitter.com/Abendiix" style="width: 15%;margin: 2%;"><img src="assets/img/Twitter.svg"></a><a href="https://abendiix.itch.io/" style="width: 15%;margin: 2%;"><img src="assets/img/Itch.io.svg"></a><a href="https://ko-fi.com/abendiix" style="width: 15%;margin: 2%;"><img src="assets/img/Ko-fi.svg"></a></div>
                         </div>
                         <div class="row d-xl-flex justify-content-xl-center">
-                            <div class="col d-flex justify-content-center align-items-center"><a href="https://abendiix.com/" style="color: #141414; margin: 10px;">English</a></div>
+                            <div class="col d-flex justify-content-center align-items-center"><a href="/" style="color: #141414; margin: 10px;">English</a></div>
                         </div>
                     </div>
                 </div>
