--- a/es.html
+++ b/es.html
@@ -52,7 +52,7 @@
                     <div class="col" style="background: #ffffff;border-radius: 10px;margin: 3%;"><img src="assets/img/spriteslove.svg" style="width: inherit;border-radius: 10px;margin-bottom: 10px;margin-top: 20px;border-style: solid;border-color: #141414;"><a style="color: #141414;">Sprites Love</a>
                         <div></div>
                         <div class="row text-center">
-                            <div class="col"><a href="https://spriteslove.com/"><i class="fas fa-link" style="margin-top: 10px;margin-right: 4%;margin-left: 4%;font-size: inherit;margin-bottom: 20px; color: #141414;"></i></a></div>
+                            <div class="col"><a href="https://spriteslove.com/es"><i class="fas fa-link" style="margin-top: 10px;margin-right: 4%;margin-left: 4%;font-size: inherit;margin-bottom: 20px; color: #141414;"></i></a></div>
                         </div>
                     </div>
                 </div>
