Implemented the copy function for the contact emails and fixed their connection to send and receive emails

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <!--Contact section-->
     <div class="text-center" style="margin: 2vh; margin-bottom: 1023%;">
         <p style="margin: 8px; color: #141414;" id="contact">Contact via email</p>
-        <a href="mailto:contact@abendiix.com" style="color: #141414; margin: 10px;" id="copy">Copy</a>
+        <a style="color: #141414; margin: 10px; text-decoration: underline;" onclick="copyEmail()" id="copy">Copy</a>
         <a href="mailto:contact@abendiix.com" style="color: #141414; margin: 10px;" id="openApp">Open app</a>
     </div>
 
@@ -102,9 +102,11 @@
     <p id="emoti"></p>
 
     <!--Scripts-->
-    <script src="assets/js/languageChanged.js"></script>
+    <script src="assets/js/copyToClipboardScript.js"></script>
     <script src="assets/js/emoti.js"></script>
+    <script src="assets/js/languageChanged.js"></script>
 
 </body>
 
 </html>
+
