--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </h1>
 
                     <!--Moto-->
-                    <h2 style="margin: 8px; margin-bottom: 15px;" id="moto">Games and tools!</h2>
+                    <h2 style="margin: 8px; margin-bottom: 15px;" id="moto">Games, tools and more!</h2>
                 </div>
             </div>
 
